# dysarthria-tools

./: .gitignore  README.md  gcp_vm_startup.sh  metrics.json  pyproject.toml  train_whisper_lora_gcp.py  whisper_lora_finetune_colab.py
docs/: parselmouth-opportunities.md
docs/plans/: 2026-03-21-live-metrics-logging-plan.md  2026-03-21-native-macos-tts-plan.md  2026-03-21-selective-rollback-endpointed-plan.md  2026-03-21-speaker-gate-plan.md  2026-03-21-whispercpp-local-poc-design.md  2026-03-26-tts-fallback-design.md
src/whisper_poc/: __init__.py  app.py  asr_whispercpp.py  audio_capture.py  config.py  prosody.py  speaker_gate.py  tts_azure.py  tts_elevenlabs.py  tts_fallback.py  tts_local.py  vad_segmenter.py
tests/: test_asr_whispercpp.py  test_audio_capture.py  test_cli.py  test_config.py  test_endpointed_runtime.py  test_prosody.py  test_speaker_gate.py  test_tts_azure.py  test_tts_elevenlabs.py  test_tts_fallback.py  test_tts_local.py  test_vad_segmenter.py
